# audiosynth-cpp

./: .gitignore  README.md
audiosynth_62275/: CMakeLists.txt
audiosynth_62275/src/: main.cpp
audiosynth_62275/src/audio/: AudioGenerator.cpp  Envelope.cpp  Filter.cpp  Oscillator.cpp  TripleOscillator.cpp
audiosynth_62275/src/audio/include/: AudioGenerator.h  Envelope.h  Filter.h  Oscillator.h  SynthConstants.h  SynthParams.h  TripleOscillator.h
audiosynth_62275/src/gui/: MainWindow.cpp
audiosynth_62275/src/gui/include/: MainWindow.h
